--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
+        "symfony/config": "^4.0",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
