--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.4",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.0",
@@ -23,14 +24,14 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "vich/uploader-bundle": "^1.8"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "^4.0",
-        "symfony/maker-bundle": "^1.4",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "*",
         "symfony/web-server-bundle": "^4.0"
