--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
         "symfony/yaml": "^4.0",
-        "vich/uploader-bundle": "^1.8"
+        "vich/uploader-bundle": "dev-756-file-remove-queue"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.0",
